// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`golden: client traces through executeCase > client trace error 1`] = `
{
  "authType": "none",
  "clientTelemetry": {
    "native": "kept",
  },
  "clientUsage": {
    "durationMs": "<time>",
    "inputTokens": 50,
    "outputTokens": 10,
  },
  "datasetName": "single-case",
  "durationMs": "<time>",
  "error": "native session missing",
  "id": "trace",
  "pass": false,
  "project": "golden",
  "request": {
    "assertions": {
      "containsText": "sunny",
      "toolCallCount": {
        "max": 1,
      },
      "toolsTriggered": {
        "calls": [
          {
            "name": "weather.get_weather",
            "required": true,
          },
          {
            "kind": "skill",
            "name": "forecasting",
            "required": true,
          },
        ],
      },
    },
    "client": "mst",
    "input": "Weather in London?",
  },
  "response": {
    "events": [
      {
        "arguments": {
          "city": "London",
        },
        "kind": "tool_call",
        "name": "get_weather",
        "output": "sunny",
        "server": "weather",
        "source": "mcp",
      },
      {
        "kind": "skill",
        "name": "forecasting",
        "source": "builtin",
      },
      {
        "kind": "tool_call",
        "name": "web_search",
        "source": "builtin",
      },
    ],
    "evidence": "structured",
    "response": "It is sunny in London.",
    "success": false,
    "telemetry": {
      "native": "kept",
    },
    "toolCalls": [
      {
        "arguments": {
          "city": "London",
        },
        "kind": "tool_call",
        "name": "get_weather",
        "output": "sunny",
        "server": "weather",
        "source": "mcp",
      },
      {
        "arguments": {},
        "kind": "tool_call",
        "name": "web_search",
        "source": "builtin",
      },
    ],
    "usage": {
      "durationMs": "<time>",
      "inputTokens": 50,
      "outputTokens": 10,
    },
  },
  "scores": {},
  "source": "eval",
  "trace": {
    "error": "native session missing",
    "events": [
      {
        "arguments": {
          "city": "London",
        },
        "kind": "tool_call",
        "name": "get_weather",
        "output": "sunny",
        "server": "weather",
        "source": "mcp",
      },
      {
        "kind": "skill",
        "name": "forecasting",
        "source": "builtin",
      },
      {
        "kind": "tool_call",
        "name": "web_search",
        "source": "builtin",
      },
    ],
    "evidence": "structured",
    "finalText": "It is sunny in London.",
    "usage": {
      "durationMs": "<time>",
      "inputTokens": 50,
      "outputTokens": 10,
    },
  },
  "traceEvidence": "structured",
}
`;

exports[`golden: client traces through executeCase > executeCase that throws 1`] = `
{
  "authType": "none",
  "datasetName": "single-case",
  "durationMs": "<time>",
  "error": "client crashed",
  "id": "trace",
  "pass": false,
  "project": "golden",
  "request": {
    "assertions": {
      "containsText": "sunny",
      "toolCallCount": {
        "max": 1,
      },
      "toolsTriggered": {
        "calls": [
          {
            "name": "weather.get_weather",
            "required": true,
          },
          {
            "kind": "skill",
            "name": "forecasting",
            "required": true,
          },
        ],
      },
    },
    "client": "mst",
    "input": "Weather in London?",
  },
  "scores": {},
  "source": "eval",
}
`;

exports[`golden: client traces through executeCase > none evidence 1`] = `
{
  "authType": "none",
  "clientTelemetry": {
    "native": "kept",
  },
  "clientUsage": {
    "durationMs": "<time>",
    "inputTokens": 50,
    "outputTokens": 10,
  },
  "datasetName": "single-case",
  "durationMs": "<time>",
  "id": "trace",
  "pass": false,
  "project": "golden",
  "request": {
    "assertions": {
      "containsText": "sunny",
      "toolCallCount": {
        "max": 1,
      },
      "toolsTriggered": {
        "calls": [
          {
            "name": "weather.get_weather",
            "required": true,
          },
          {
            "kind": "skill",
            "name": "forecasting",
            "required": true,
          },
        ],
      },
    },
    "client": "mst",
    "input": "Weather in London?",
  },
  "response": {
    "events": [
      {
        "arguments": {
          "city": "London",
        },
        "kind": "tool_call",
        "name": "get_weather",
        "output": "sunny",
        "server": "weather",
        "source": "mcp",
      },
      {
        "kind": "skill",
        "name": "forecasting",
        "source": "builtin",
      },
      {
        "kind": "tool_call",
        "name": "web_search",
        "source": "builtin",
      },
    ],
    "evidence": "none",
    "response": "It is sunny in London.",
    "success": true,
    "telemetry": {
      "native": "kept",
    },
    "toolCalls": [
      {
        "arguments": {
          "city": "London",
        },
        "kind": "tool_call",
        "name": "weather.get_weather",
        "output": "sunny",
        "server": "weather",
        "source": "mcp",
      },
      {
        "arguments": {},
        "kind": "tool_call",
        "name": "web_search",
        "source": "builtin",
      },
    ],
    "usage": {
      "durationMs": "<time>",
      "inputTokens": 50,
      "outputTokens": 10,
    },
  },
  "scores": {
    "textContains": {
      "details": "Response contains expected text",
      "pass": true,
    },
    "toolCallCount": {
      "details": "Client evidence is none; structured tool evidence is required.",
      "pass": false,
    },
    "toolsTriggered": {
      "details": "Client evidence is none; structured tool evidence is required.",
      "pass": false,
    },
  },
  "source": "eval",
  "trace": {
    "events": [
      {
        "arguments": {
          "city": "London",
        },
        "kind": "tool_call",
        "name": "get_weather",
        "output": "sunny",
        "server": "weather",
        "source": "mcp",
      },
      {
        "kind": "skill",
        "name": "forecasting",
        "source": "builtin",
      },
      {
        "kind": "tool_call",
        "name": "web_search",
        "source": "builtin",
      },
    ],
    "evidence": "none",
    "finalText": "It is sunny in London.",
    "usage": {
      "durationMs": "<time>",
      "inputTokens": 50,
      "outputTokens": 10,
    },
  },
  "traceEvidence": "none",
}
`;

exports[`golden: client traces through executeCase > observed evidence 1`] = `
{
  "authType": "none",
  "clientTelemetry": {
    "native": "kept",
  },
  "clientUsage": {
    "durationMs": "<time>",
    "inputTokens": 50,
    "outputTokens": 10,
  },
  "datasetName": "single-case",
  "durationMs": "<time>",
  "id": "trace",
  "pass": false,
  "project": "golden",
  "request": {
    "assertions": {
      "containsText": "sunny",
      "toolCallCount": {
        "max": 1,
      },
      "toolsTriggered": {
        "calls": [
          {
            "name": "weather.get_weather",
            "required": true,
          },
          {
            "kind": "skill",
            "name": "forecasting",
            "required": true,
          },
        ],
      },
    },
    "client": "mst",
    "input": "Weather in London?",
  },
  "response": {
    "events": [
      {
        "arguments": {
          "city": "London",
        },
        "kind": "tool_call",
        "name": "get_weather",
        "output": "sunny",
        "server": "weather",
        "source": "mcp",
      },
      {
        "kind": "skill",
        "name": "forecasting",
        "source": "builtin",
      },
      {
        "kind": "tool_call",
        "name": "web_search",
        "source": "builtin",
      },
    ],
    "evidence": "observed",
    "response": "It is sunny in London.",
    "success": true,
    "telemetry": {
      "native": "kept",
    },
    "toolCalls": [
      {
        "arguments": {
          "city": "London",
        },
        "kind": "tool_call",
        "name": "weather.get_weather",
        "output": "sunny",
        "server": "weather",
        "source": "mcp",
      },
      {
        "arguments": {},
        "kind": "tool_call",
        "name": "web_search",
        "source": "builtin",
      },
    ],
    "usage": {
      "durationMs": "<time>",
      "inputTokens": 50,
      "outputTokens": 10,
    },
  },
  "scores": {
    "textContains": {
      "details": "Response contains expected text",
      "pass": true,
    },
    "toolCallCount": {
      "details": "Client evidence is observed; structured tool evidence is required.",
      "pass": false,
    },
    "toolsTriggered": {
      "details": "Client evidence is observed; structured tool evidence is required.",
      "pass": false,
    },
  },
  "source": "eval",
  "trace": {
    "events": [
      {
        "arguments": {
          "city": "London",
        },
        "kind": "tool_call",
        "name": "get_weather",
        "output": "sunny",
        "server": "weather",
        "source": "mcp",
      },
      {
        "kind": "skill",
        "name": "forecasting",
        "source": "builtin",
      },
      {
        "kind": "tool_call",
        "name": "web_search",
        "source": "builtin",
      },
    ],
    "evidence": "observed",
    "finalText": "It is sunny in London.",
    "usage": {
      "durationMs": "<time>",
      "inputTokens": 50,
      "outputTokens": 10,
    },
  },
  "traceEvidence": "observed",
}
`;

exports[`golden: client traces through executeCase > structured evidence 1`] = `
{
  "authType": "none",
  "clientTelemetry": {
    "native": "kept",
  },
  "clientUsage": {
    "durationMs": "<time>",
    "inputTokens": 50,
    "outputTokens": 10,
  },
  "datasetName": "single-case",
  "durationMs": "<time>",
  "id": "trace",
  "pass": false,
  "project": "golden",
  "request": {
    "assertions": {
      "containsText": "sunny",
      "toolCallCount": {
        "max": 1,
      },
      "toolsTriggered": {
        "calls": [
          {
            "name": "weather.get_weather",
            "required": true,
          },
          {
            "kind": "skill",
            "name": "forecasting",
            "required": true,
          },
        ],
      },
    },
    "client": "mst",
    "input": "Weather in London?",
  },
  "response": {
    "events": [
      {
        "arguments": {
          "city": "London",
        },
        "kind": "tool_call",
        "name": "get_weather",
        "output": "sunny",
        "server": "weather",
        "source": "mcp",
      },
      {
        "kind": "skill",
        "name": "forecasting",
        "source": "builtin",
      },
      {
        "kind": "tool_call",
        "name": "web_search",
        "source": "builtin",
      },
    ],
    "evidence": "structured",
    "response": "It is sunny in London.",
    "success": true,
    "telemetry": {
      "native": "kept",
    },
    "toolCalls": [
      {
        "arguments": {
          "city": "London",
        },
        "kind": "tool_call",
        "name": "weather.get_weather",
        "output": "sunny",
        "server": "weather",
        "source": "mcp",
      },
      {
        "arguments": {},
        "kind": "tool_call",
        "name": "web_search",
        "source": "builtin",
      },
    ],
    "usage": {
      "durationMs": "<time>",
      "inputTokens": 50,
      "outputTokens": 10,
    },
  },
  "scores": {
    "textContains": {
      "details": "Response contains expected text",
      "pass": true,
    },
    "toolCallCount": {
      "details": "Expected at most 1 tool call(s), but got 2",
      "pass": false,
    },
    "toolsTriggered": {
      "details": "All tool call assertions met",
      "pass": true,
    },
  },
  "source": "eval",
  "toolCallTrace": {
    "calls": [
      {
        "arguments": {
          "city": "London",
        },
        "name": "weather.get_weather",
        "status": "expected",
      },
      {
        "arguments": {},
        "name": "web_search",
        "status": "unexpected",
      },
    ],
    "missed": [],
  },
  "toolPrecision": 0.6666666666666666,
  "toolRecall": 1,
  "trace": {
    "events": [
      {
        "arguments": {
          "city": "London",
        },
        "kind": "tool_call",
        "name": "get_weather",
        "output": "sunny",
        "server": "weather",
        "source": "mcp",
      },
      {
        "kind": "skill",
        "name": "forecasting",
        "source": "builtin",
      },
      {
        "kind": "tool_call",
        "name": "web_search",
        "source": "builtin",
      },
    ],
    "evidence": "structured",
    "finalText": "It is sunny in London.",
    "usage": {
      "durationMs": "<time>",
      "inputTokens": 50,
      "outputTokens": 10,
    },
  },
  "traceEvidence": "structured",
}
`;

exports[`golden: dataset aggregation > two cases, one failing 1`] = `
{
  "caseResults": [
    {
      "authType": "none",
      "clientUsage": {
        "durationMs": "<time>",
        "inputTokens": 100,
        "outputTokens": 20,
      },
      "datasetName": "mixed",
      "durationMs": "<time>",
      "id": "d",
      "pass": true,
      "project": "golden",
      "request": {
        "assertions": {
          "containsText": "sunny",
        },
        "client": "mst",
        "input": "Is it sunny in London?",
      },
      "response": {
        "response": "It is sunny in London.",
        "success": true,
        "toolCalls": [
          {
            "arguments": {
              "city": "London",
            },
            "name": "get_weather",
            "output": "sunny",
          },
          {
            "arguments": {
              "q": "London",
            },
            "name": "search",
          },
        ],
        "usage": {
          "durationMs": "<time>",
          "inputTokens": 100,
          "outputTokens": 20,
        },
      },
      "scores": {
        "textContains": {
          "details": "Response contains expected text",
          "pass": true,
        },
      },
      "source": "eval",
      "trace": {
        "events": [
          {
            "arguments": {
              "city": "London",
            },
            "kind": "tool_call",
            "name": "get_weather",
            "output": "sunny",
            "source": "mcp",
          },
          {
            "arguments": {
              "q": "London",
            },
            "kind": "tool_call",
            "name": "search",
            "source": "mcp",
          },
        ],
        "finalText": "It is sunny in London.",
        "usage": {
          "durationMs": "<time>",
          "inputTokens": 100,
          "outputTokens": 20,
        },
      },
    },
    {
      "authType": "none",
      "clientUsage": {
        "durationMs": "<time>",
        "inputTokens": 100,
        "outputTokens": 20,
      },
      "datasetName": "mixed",
      "durationMs": "<time>",
      "id": "client",
      "pass": false,
      "project": "golden",
      "request": {
        "assertions": {
          "containsText": "sunny",
          "toolCallCount": {
            "max": 3,
            "min": 1,
          },
          "toolsTriggered": {
            "calls": [
              {
                "name": "get_weather",
                "required": true,
              },
              {
                "name": "forecast",
                "required": true,
              },
            ],
          },
        },
        "client": "mst",
        "input": "Weather in London?",
      },
      "response": {
        "response": "It is sunny in London.",
        "success": true,
        "toolCalls": [
          {
            "arguments": {
              "city": "London",
            },
            "name": "get_weather",
            "output": "sunny",
          },
          {
            "arguments": {
              "q": "London",
            },
            "name": "search",
          },
        ],
        "usage": {
          "durationMs": "<time>",
          "inputTokens": 100,
          "outputTokens": 20,
        },
      },
      "scores": {
        "textContains": {
          "details": "Response contains expected text",
          "pass": true,
        },
        "toolCallCount": {
          "details": "Tool call count (2) is within expected range",
          "pass": true,
        },
        "toolsTriggered": {
          "details": "Expected tool 'forecast' to be called, but it was not",
          "pass": false,
        },
      },
      "source": "eval",
      "toolCallTrace": {
        "calls": [
          {
            "arguments": {
              "city": "London",
            },
            "name": "get_weather",
            "status": "expected",
          },
          {
            "arguments": {
              "q": "London",
            },
            "name": "search",
            "status": "unexpected",
          },
        ],
        "missed": [
          {
            "name": "forecast",
          },
        ],
      },
      "toolPrecision": 0.5,
      "toolRecall": 0.5,
      "trace": {
        "events": [
          {
            "arguments": {
              "city": "London",
            },
            "kind": "tool_call",
            "name": "get_weather",
            "output": "sunny",
            "source": "mcp",
          },
          {
            "arguments": {
              "q": "London",
            },
            "kind": "tool_call",
            "name": "search",
            "source": "mcp",
          },
        ],
        "finalText": "It is sunny in London.",
        "usage": {
          "durationMs": "<time>",
          "inputTokens": 100,
          "outputTokens": 20,
        },
      },
    },
  ],
  "summary": {
    "datasetToolF1": 0.5,
    "datasetToolPrecision": 0.5,
    "datasetToolRecall": 0.5,
    "durationMs": "<time>",
    "failed": 1,
    "metadata": {
      "gitHash": "<build>",
      "packageVersion": "<build>",
      "protocol": {
        "era": "legacy",
        "negotiated": "2025-11-25",
        "requested": "legacy",
      },
      "timestamp": "<time>",
    },
    "passed": 1,
    "total": 2,
    "totalClientUsage": {
      "durationMs": "<time>",
      "inputTokens": 200,
      "outputTokens": 40,
    },
  },
}
`;

exports[`golden: judges > judges a client response 1`] = `
{
  "calls": [
    [
      "golden-case-judge",
      {
        "response": "It is sunny in London.",
        "success": true,
        "toolCalls": [
          {
            "arguments": {
              "city": "London",
            },
            "name": "get_weather",
            "output": "sunny",
          },
          {
            "arguments": {
              "q": "London",
            },
            "name": "search",
          },
        ],
        "usage": {
          "durationMs": "<time>",
          "inputTokens": 100,
          "outputTokens": 20,
        },
      },
      null,
      {},
    ],
  ],
  "result": {
    "authType": "none",
    "clientUsage": {
      "durationMs": "<time>",
      "inputTokens": 100,
      "outputTokens": 20,
    },
    "datasetName": "single-case",
    "durationMs": "<time>",
    "id": "host-judged",
    "pass": true,
    "project": "golden",
    "request": {
      "assertions": {
        "passesJudge": {
          "judge": "test/golden-case-judge",
        },
      },
      "client": "mst",
      "input": "Weather in London?",
    },
    "response": {
      "response": "It is sunny in London.",
      "success": true,
      "toolCalls": [
        {
          "arguments": {
            "city": "London",
          },
          "name": "get_weather",
          "output": "sunny",
        },
        {
          "arguments": {
            "q": "London",
          },
          "name": "search",
        },
      ],
      "usage": {
        "durationMs": "<time>",
        "inputTokens": 100,
        "outputTokens": 20,
      },
    },
    "scores": {
      "judge": {
        "details": "Judge "test/golden-case-judge" passed with score 0.90",
        "judgeName": "test/golden-case-judge",
        "pass": true,
        "reasoning": "looks right",
        "score": 0.9,
      },
    },
    "source": "eval",
    "trace": {
      "events": [
        {
          "arguments": {
            "city": "London",
          },
          "kind": "tool_call",
          "name": "get_weather",
          "output": "sunny",
          "source": "mcp",
        },
        {
          "arguments": {
            "q": "London",
          },
          "kind": "tool_call",
          "name": "search",
          "source": "mcp",
        },
      ],
      "finalText": "It is sunny in London.",
      "usage": {
        "durationMs": "<time>",
        "inputTokens": 100,
        "outputTokens": 20,
      },
    },
  },
}
`;

exports[`golden: judges > one judge with case reps and the canonical answer as reference 1`] = `
{
  "calls": [
    [
      "golden-case-judge",
      {
        "response": "It is sunny in London.",
        "success": true,
        "toolCalls": [
          {
            "arguments": {
              "city": "London",
            },
            "name": "get_weather",
            "output": "sunny",
          },
          {
            "arguments": {
              "q": "London",
            },
            "name": "search",
          },
        ],
        "usage": {
          "durationMs": "<time>",
          "inputTokens": 100,
          "outputTokens": 20,
        },
      },
      "sunny",
      {},
    ],
    [
      "golden-case-judge",
      {
        "response": "It is sunny in London.",
        "success": true,
        "toolCalls": [
          {
            "arguments": {
              "city": "London",
            },
            "name": "get_weather",
            "output": "sunny",
          },
          {
            "arguments": {
              "q": "London",
            },
            "name": "search",
          },
        ],
        "usage": {
          "durationMs": "<time>",
          "inputTokens": 100,
          "outputTokens": 20,
        },
      },
      "sunny",
      {},
    ],
  ],
  "result": {
    "authType": "none",
    "clientUsage": {
      "durationMs": "<time>",
      "inputTokens": 100,
      "outputTokens": 20,
    },
    "datasetName": "single-case",
    "durationMs": "<time>",
    "id": "judged",
    "pass": true,
    "project": "golden",
    "request": {
      "assertions": {
        "passesJudge": {
          "judge": "test/golden-case-judge",
        },
      },
      "client": "mst",
      "input": "Weather in London?",
      "judgeReps": 2,
      "reference": "sunny",
    },
    "response": {
      "response": "It is sunny in London.",
      "success": true,
      "toolCalls": [
        {
          "arguments": {
            "city": "London",
          },
          "name": "get_weather",
          "output": "sunny",
        },
        {
          "arguments": {
            "q": "London",
          },
          "name": "search",
        },
      ],
      "usage": {
        "durationMs": "<time>",
        "inputTokens": 100,
        "outputTokens": 20,
      },
    },
    "scores": {
      "judge": {
        "details": "Judge "test/golden-case-judge" passed with score 0.90 (mean of 2 reps: [0.90, 0.90])",
        "judgeName": "test/golden-case-judge",
        "pass": true,
        "reasoning": "looks right",
        "score": 0.9,
      },
    },
    "source": "eval",
    "trace": {
      "events": [
        {
          "arguments": {
            "city": "London",
          },
          "kind": "tool_call",
          "name": "get_weather",
          "output": "sunny",
          "source": "mcp",
        },
        {
          "arguments": {
            "q": "London",
          },
          "kind": "tool_call",
          "name": "search",
          "source": "mcp",
        },
      ],
      "finalText": "It is sunny in London.",
      "usage": {
        "durationMs": "<time>",
        "inputTokens": 100,
        "outputTokens": 20,
      },
    },
  },
}
`;

exports[`golden: judges > several judges, one failing, with an explicit reference and reps 1`] = `
{
  "calls": [
    [
      "golden-case-judge",
      {
        "response": "It is sunny in London.",
        "success": true,
        "toolCalls": [
          {
            "arguments": {
              "city": "London",
            },
            "name": "get_weather",
            "output": "sunny",
          },
          {
            "arguments": {
              "q": "London",
            },
            "name": "search",
          },
        ],
        "usage": {
          "durationMs": "<time>",
          "inputTokens": 100,
          "outputTokens": 20,
        },
      },
      "explicit",
      {},
    ],
    [
      "golden-strict-judge",
      {
        "response": "It is sunny in London.",
        "success": true,
        "toolCalls": [
          {
            "arguments": {
              "city": "London",
            },
            "name": "get_weather",
            "output": "sunny",
          },
          {
            "arguments": {
              "q": "London",
            },
            "name": "search",
          },
        ],
        "usage": {
          "durationMs": "<time>",
          "inputTokens": 100,
          "outputTokens": 20,
        },
      },
      "unused",
    ],
    [
      "golden-strict-judge",
      {
        "response": "It is sunny in London.",
        "success": true,
        "toolCalls": [
          {
            "arguments": {
              "city": "London",
            },
            "name": "get_weather",
            "output": "sunny",
          },
          {
            "arguments": {
              "q": "London",
            },
            "name": "search",
          },
        ],
        "usage": {
          "durationMs": "<time>",
          "inputTokens": 100,
          "outputTokens": 20,
        },
      },
      "unused",
    ],
    [
      "golden-strict-judge",
      {
        "response": "It is sunny in London.",
        "success": true,
        "toolCalls": [
          {
            "arguments": {
              "city": "London",
            },
            "name": "get_weather",
            "output": "sunny",
          },
          {
            "arguments": {
              "q": "London",
            },
            "name": "search",
          },
        ],
        "usage": {
          "durationMs": "<time>",
          "inputTokens": 100,
          "outputTokens": 20,
        },
      },
      "unused",
    ],
  ],
  "result": {
    "authType": "none",
    "clientUsage": {
      "durationMs": "<time>",
      "inputTokens": 100,
      "outputTokens": 20,
    },
    "datasetName": "single-case",
    "durationMs": "<time>",
    "id": "multi-judged",
    "pass": false,
    "project": "golden",
    "request": {
      "assertions": {
        "passesJudge": [
          {
            "judge": "test/golden-case-judge",
            "reference": "explicit",
            "reps": 1,
          },
          {
            "judge": "test/golden-strict-judge",
            "threshold": 0.5,
          },
        ],
      },
      "client": "mst",
      "input": "Weather in London?",
      "judgeReps": 3,
      "reference": "unused",
    },
    "response": {
      "response": "It is sunny in London.",
      "success": true,
      "toolCalls": [
        {
          "arguments": {
            "city": "London",
          },
          "name": "get_weather",
          "output": "sunny",
        },
        {
          "arguments": {
            "q": "London",
          },
          "name": "search",
        },
      ],
      "usage": {
        "durationMs": "<time>",
        "inputTokens": 100,
        "outputTokens": 20,
      },
    },
    "scores": {
      "judge": {
        "details": "1/2 judges passed",
        "judgeResults": [
          {
            "details": "Judge "test/golden-case-judge" passed with score 0.90",
            "judgeName": "test/golden-case-judge",
            "pass": true,
            "reasoning": "looks right",
            "score": 0.9,
          },
          {
            "details": "Judge "test/golden-strict-judge" failed with score 0.20 (threshold: 0.5) (mean of 3 reps: [0.20, 0.20, 0.20]). too vague",
            "judgeName": "test/golden-strict-judge",
            "pass": false,
            "reasoning": "too vague",
            "score": 0.2,
          },
        ],
        "pass": false,
      },
    },
    "source": "eval",
    "trace": {
      "events": [
        {
          "arguments": {
            "city": "London",
          },
          "kind": "tool_call",
          "name": "get_weather",
          "output": "sunny",
          "source": "mcp",
        },
        {
          "arguments": {
            "q": "London",
          },
          "kind": "tool_call",
          "name": "search",
          "source": "mcp",
        },
      ],
      "finalText": "It is sunny in London.",
      "usage": {
        "durationMs": "<time>",
        "inputTokens": 100,
        "outputTokens": 20,
      },
    },
  },
}
`;

exports[`golden: rubric judges > a built-in rubric with the default provider and the canonical answer 1`] = `
{
  "calls": [
    [
      "createJudge",
      {},
    ],
    [
      "llm.evaluate",
      {
        "response": "It is sunny in London.",
        "success": true,
        "toolCalls": [
          {
            "arguments": {
              "city": "London",
            },
            "name": "get_weather",
            "output": "sunny",
          },
          {
            "arguments": {
              "q": "London",
            },
            "name": "search",
          },
        ],
        "usage": {
          "durationMs": "<time>",
          "inputTokens": 100,
          "outputTokens": 20,
        },
      },
      "sunny",
      "Evaluate whether the response is factually correct and accurately answers the question. Compare against the reference answer if provided. Score 1.0 for fully correct with no errors; Score 0.75 for mostly correct with one minor inaccuracy or omission; Score 0.5 for partially correct — answers part of the question but misses key elements; Score 0.25 for minimally relevant but substantially incorrect or missing most key details; Score 0.0 for incorrect, irrelevant, or directly contradicting the reference.",
    ],
  ],
  "result": {
    "authType": "none",
    "clientUsage": {
      "durationMs": "<time>",
      "inputTokens": 100,
      "outputTokens": 20,
    },
    "datasetName": "single-case",
    "durationMs": "<time>",
    "id": "rubric-judged",
    "pass": true,
    "project": "golden",
    "request": {
      "assertions": {
        "passesJudge": {
          "rubric": "correctness",
        },
      },
      "client": "mst",
      "input": "Weather in London?",
      "reference": "sunny",
    },
    "response": {
      "response": "It is sunny in London.",
      "success": true,
      "toolCalls": [
        {
          "arguments": {
            "city": "London",
          },
          "name": "get_weather",
          "output": "sunny",
        },
        {
          "arguments": {
            "q": "London",
          },
          "name": "search",
        },
      ],
      "usage": {
        "durationMs": "<time>",
        "inputTokens": 100,
        "outputTokens": 20,
      },
    },
    "scores": {
      "judge": {
        "details": "Judge "correctness" passed with score 0.80",
        "judgeName": "correctness",
        "judgeProvider": "anthropic",
        "pass": true,
        "reasoning": "Accurate.",
        "score": 0.8,
      },
    },
    "source": "eval",
    "trace": {
      "events": [
        {
          "arguments": {
            "city": "London",
          },
          "kind": "tool_call",
          "name": "get_weather",
          "output": "sunny",
          "source": "mcp",
        },
        {
          "arguments": {
            "q": "London",
          },
          "kind": "tool_call",
          "name": "search",
          "source": "mcp",
        },
      ],
      "finalText": "It is sunny in London.",
      "usage": {
        "durationMs": "<time>",
        "inputTokens": 100,
        "outputTokens": 20,
      },
    },
  },
}
`;

exports[`golden: rubric judges > a custom-text rubric with provider, model, LLM options and a failing threshold 1`] = `
{
  "calls": [
    [
      "createJudge",
      {
        "apiKeyEnvVar": "TEST_KEY",
        "maxTokens": 64,
        "maxToolOutputSize": 1000,
        "model": "gpt-test",
        "provider": "openai",
        "temperature": 0.5,
      },
    ],
    [
      "llm.evaluate",
      {
        "response": "It is sunny in London.",
        "success": true,
        "toolCalls": [
          {
            "arguments": {
              "city": "London",
            },
            "name": "get_weather",
            "output": "sunny",
          },
          {
            "arguments": {
              "q": "London",
            },
            "name": "search",
          },
        ],
        "usage": {
          "durationMs": "<time>",
          "inputTokens": 100,
          "outputTokens": 20,
        },
      },
      "It is sunny.",
      "Does it say it is sunny?",
    ],
  ],
  "result": {
    "authType": "none",
    "clientUsage": {
      "durationMs": "<time>",
      "inputTokens": 100,
      "outputTokens": 20,
    },
    "datasetName": "single-case",
    "durationMs": "<time>",
    "id": "rubric-custom",
    "pass": false,
    "project": "golden",
    "request": {
      "assertions": {
        "passesJudge": {
          "apiKeyEnvVar": "[redacted]",
          "maxTokens": "[redacted]",
          "maxToolOutputSize": 1000,
          "model": "gpt-test",
          "provider": "openai",
          "reference": "It is sunny.",
          "rubric": {
            "text": "Does it say it is sunny?
Answer carefully.",
          },
          "temperature": 0.5,
          "threshold": 0.9,
        },
      },
      "client": "mst",
      "input": "Weather in London?",
    },
    "response": {
      "response": "It is sunny in London.",
      "success": true,
      "toolCalls": [
        {
          "arguments": {
            "city": "London",
          },
          "name": "get_weather",
          "output": "sunny",
        },
        {
          "arguments": {
            "q": "London",
          },
          "name": "search",
        },
      ],
      "usage": {
        "durationMs": "<time>",
        "inputTokens": 100,
        "outputTokens": 20,
      },
    },
    "scores": {
      "judge": {
        "details": "Judge "rubric" failed with score 0.60 (threshold: 0.9). Partly.",
        "judgeModel": "gpt-test",
        "judgeName": "rubric",
        "judgeProvider": "openai",
        "pass": false,
        "reasoning": "Partly.",
        "score": 0.6,
      },
    },
    "source": "eval",
    "trace": {
      "events": [
        {
          "arguments": {
            "city": "London",
          },
          "kind": "tool_call",
          "name": "get_weather",
          "output": "sunny",
          "source": "mcp",
        },
        {
          "arguments": {
            "q": "London",
          },
          "kind": "tool_call",
          "name": "search",
          "source": "mcp",
        },
      ],
      "finalText": "It is sunny in London.",
      "usage": {
        "durationMs": "<time>",
        "inputTokens": 100,
        "outputTokens": 20,
      },
    },
  },
}
`;

exports[`golden: rubric judges > a judge client error fails the assertion 1`] = `
{
  "calls": [
    [
      "createJudge",
      {},
    ],
    [
      "llm.evaluate",
      {
        "response": "It is sunny in London.",
        "success": true,
        "toolCalls": [
          {
            "arguments": {
              "city": "London",
            },
            "name": "get_weather",
            "output": "sunny",
          },
          {
            "arguments": {
              "q": "London",
            },
            "name": "search",
          },
        ],
        "usage": {
          "durationMs": "<time>",
          "inputTokens": 100,
          "outputTokens": 20,
        },
      },
      null,
      "Evaluate whether the response is factually correct and accurately answers the question. Compare against the reference answer if provided. Score 1.0 for fully correct with no errors; Score 0.75 for mostly correct with one minor inaccuracy or omission; Score 0.5 for partially correct — answers part of the question but misses key elements; Score 0.25 for minimally relevant but substantially incorrect or missing most key details; Score 0.0 for incorrect, irrelevant, or directly contradicting the reference.",
    ],
  ],
  "result": {
    "authType": "none",
    "clientUsage": {
      "durationMs": "<time>",
      "inputTokens": 100,
      "outputTokens": 20,
    },
    "datasetName": "single-case",
    "durationMs": "<time>",
    "id": "rubric-error",
    "pass": false,
    "project": "golden",
    "request": {
      "assertions": {
        "passesJudge": {
          "rubric": "correctness",
        },
      },
      "client": "mst",
      "input": "Weather in London?",
    },
    "response": {
      "response": "It is sunny in London.",
      "success": true,
      "toolCalls": [
        {
          "arguments": {
            "city": "London",
          },
          "name": "get_weather",
          "output": "sunny",
        },
        {
          "arguments": {
            "q": "London",
          },
          "name": "search",
        },
      ],
      "usage": {
        "durationMs": "<time>",
        "inputTokens": 100,
        "outputTokens": 20,
      },
    },
    "scores": {
      "judge": {
        "details": "Judge "correctness" error: rate limited",
        "judgeName": "correctness",
        "pass": false,
      },
    },
    "source": "eval",
    "trace": {
      "events": [
        {
          "arguments": {
            "city": "London",
          },
          "kind": "tool_call",
          "name": "get_weather",
          "output": "sunny",
          "source": "mcp",
        },
        {
          "arguments": {
            "q": "London",
          },
          "kind": "tool_call",
          "name": "search",
          "source": "mcp",
        },
      ],
      "finalText": "It is sunny in London.",
      "usage": {
        "durationMs": "<time>",
        "inputTokens": 100,
        "outputTokens": 20,
      },
    },
  },
}
`;

exports[`golden: rubric judges > a rubric judge and a plugin judge under case-level judgeReps 1`] = `
{
  "calls": [
    [
      "createJudge",
      {},
    ],
    [
      "llm.evaluate",
      {
        "response": "It is sunny in London.",
        "success": true,
        "toolCalls": [
          {
            "arguments": {
              "city": "London",
            },
            "name": "get_weather",
            "output": "sunny",
          },
          {
            "arguments": {
              "q": "London",
            },
            "name": "search",
          },
        ],
        "usage": {
          "durationMs": "<time>",
          "inputTokens": 100,
          "outputTokens": 20,
        },
      },
      null,
      "Evaluate whether the response is appropriately concise without losing important information. Penalize unnecessary verbosity, padding, or repetition. Score 1.0 for well-sized — concise and complete with no unnecessary content; Score 0.75 for slightly verbose but no information is lost or repeated; Score 0.5 for moderately verbose — some padding or repetition that reduces clarity; Score 0.25 for excessively verbose — significantly overlong with substantial filler or repetition; Score 0.0 for extremely verbose — so padded or repetitive that the core answer is obscured.",
    ],
    [
      "golden-case-judge",
      {
        "response": "It is sunny in London.",
        "success": true,
        "toolCalls": [
          {
            "arguments": {
              "city": "London",
            },
            "name": "get_weather",
            "output": "sunny",
          },
          {
            "arguments": {
              "q": "London",
            },
            "name": "search",
          },
        ],
        "usage": {
          "durationMs": "<time>",
          "inputTokens": 100,
          "outputTokens": 20,
        },
      },
      null,
      {},
    ],
    [
      "golden-case-judge",
      {
        "response": "It is sunny in London.",
        "success": true,
        "toolCalls": [
          {
            "arguments": {
              "city": "London",
            },
            "name": "get_weather",
            "output": "sunny",
          },
          {
            "arguments": {
              "q": "London",
            },
            "name": "search",
          },
        ],
        "usage": {
          "durationMs": "<time>",
          "inputTokens": 100,
          "outputTokens": 20,
        },
      },
      null,
      {},
    ],
    [
      "createJudge",
      {},
    ],
    [
      "llm.evaluate",
      {
        "response": "It is sunny in London.",
        "success": true,
        "toolCalls": [
          {
            "arguments": {
              "city": "London",
            },
            "name": "get_weather",
            "output": "sunny",
          },
          {
            "arguments": {
              "q": "London",
            },
            "name": "search",
          },
        ],
        "usage": {
          "durationMs": "<time>",
          "inputTokens": 100,
          "outputTokens": 20,
        },
      },
      null,
      "Evaluate whether the response is appropriately concise without losing important information. Penalize unnecessary verbosity, padding, or repetition. Score 1.0 for well-sized — concise and complete with no unnecessary content; Score 0.75 for slightly verbose but no information is lost or repeated; Score 0.5 for moderately verbose — some padding or repetition that reduces clarity; Score 0.25 for excessively verbose — significantly overlong with substantial filler or repetition; Score 0.0 for extremely verbose — so padded or repetitive that the core answer is obscured.",
    ],
  ],
  "result": {
    "authType": "none",
    "clientUsage": {
      "durationMs": "<time>",
      "inputTokens": 100,
      "outputTokens": 20,
    },
    "datasetName": "single-case",
    "durationMs": "<time>",
    "id": "rubric-and-plugin",
    "pass": true,
    "project": "golden",
    "request": {
      "assertions": {
        "passesJudge": [
          {
            "rubric": "conciseness",
          },
          {
            "judge": "test/golden-case-judge",
          },
        ],
      },
      "client": "mst",
      "input": "Weather in London?",
      "judgeReps": 2,
    },
    "response": {
      "response": "It is sunny in London.",
      "success": true,
      "toolCalls": [
        {
          "arguments": {
            "city": "London",
          },
          "name": "get_weather",
          "output": "sunny",
        },
        {
          "arguments": {
            "q": "London",
          },
          "name": "search",
        },
      ],
      "usage": {
        "durationMs": "<time>",
        "inputTokens": 100,
        "outputTokens": 20,
      },
    },
    "scores": {
      "judge": {
        "details": "2/2 judges passed",
        "judgeResults": [
          {
            "details": "Judge "conciseness" passed with score 0.80 (mean of 2 reps: [0.70, 0.90])",
            "judgeName": "conciseness",
            "judgeProvider": "anthropic",
            "pass": true,
            "score": 0.8,
          },
          {
            "details": "Judge "test/golden-case-judge" passed with score 0.90 (mean of 2 reps: [0.90, 0.90])",
            "judgeName": "test/golden-case-judge",
            "pass": true,
            "reasoning": "looks right",
            "score": 0.9,
          },
        ],
        "pass": true,
      },
    },
    "source": "eval",
    "trace": {
      "events": [
        {
          "arguments": {
            "city": "London",
          },
          "kind": "tool_call",
          "name": "get_weather",
          "output": "sunny",
          "source": "mcp",
        },
        {
          "arguments": {
            "q": "London",
          },
          "kind": "tool_call",
          "name": "search",
          "source": "mcp",
        },
      ],
      "finalText": "It is sunny in London.",
      "usage": {
        "durationMs": "<time>",
        "inputTokens": 100,
        "outputTokens": 20,
      },
    },
  },
}
`;

exports[`golden: rubric judges > reps average the scores and report their spread 1`] = `
{
  "calls": [
    [
      "createJudge",
      {},
    ],
    [
      "llm.evaluate",
      {
        "response": "It is sunny in London.",
        "success": true,
        "toolCalls": [
          {
            "arguments": {
              "city": "London",
            },
            "name": "get_weather",
            "output": "sunny",
          },
          {
            "arguments": {
              "q": "London",
            },
            "name": "search",
          },
        ],
        "usage": {
          "durationMs": "<time>",
          "inputTokens": 100,
          "outputTokens": 20,
        },
      },
      null,
      "Evaluate whether the response fully addresses all aspects of the question. Score 1.0 if the response covers all key points comprehensively; Score 0.75 if the response covers most key points with one minor gap; Score 0.5 if the response partially answers — covers some aspects but misses others; Score 0.25 if the response touches on the topic but misses most key aspects; Score 0.0 if major aspects of the question are entirely missing or the response is off-topic.",
    ],
    [
      "createJudge",
      {},
    ],
    [
      "llm.evaluate",
      {
        "response": "It is sunny in London.",
        "success": true,
        "toolCalls": [
          {
            "arguments": {
              "city": "London",
            },
            "name": "get_weather",
            "output": "sunny",
          },
          {
            "arguments": {
              "q": "London",
            },
            "name": "search",
          },
        ],
        "usage": {
          "durationMs": "<time>",
          "inputTokens": 100,
          "outputTokens": 20,
        },
      },
      null,
      "Evaluate whether the response fully addresses all aspects of the question. Score 1.0 if the response covers all key points comprehensively; Score 0.75 if the response covers most key points with one minor gap; Score 0.5 if the response partially answers — covers some aspects but misses others; Score 0.25 if the response touches on the topic but misses most key aspects; Score 0.0 if major aspects of the question are entirely missing or the response is off-topic.",
    ],
    [
      "createJudge",
      {},
    ],
    [
      "llm.evaluate",
      {
        "response": "It is sunny in London.",
        "success": true,
        "toolCalls": [
          {
            "arguments": {
              "city": "London",
            },
            "name": "get_weather",
            "output": "sunny",
          },
          {
            "arguments": {
              "q": "London",
            },
            "name": "search",
          },
        ],
        "usage": {
          "durationMs": "<time>",
          "inputTokens": 100,
          "outputTokens": 20,
        },
      },
      null,
      "Evaluate whether the response fully addresses all aspects of the question. Score 1.0 if the response covers all key points comprehensively; Score 0.75 if the response covers most key points with one minor gap; Score 0.5 if the response partially answers — covers some aspects but misses others; Score 0.25 if the response touches on the topic but misses most key aspects; Score 0.0 if major aspects of the question are entirely missing or the response is off-topic.",
    ],
  ],
  "result": {
    "authType": "none",
    "clientUsage": {
      "durationMs": "<time>",
      "inputTokens": 100,
      "outputTokens": 20,
    },
    "datasetName": "single-case",
    "durationMs": "<time>",
    "id": "rubric-reps",
    "pass": false,
    "project": "golden",
    "request": {
      "assertions": {
        "passesJudge": {
          "reps": 3,
          "rubric": "completeness",
        },
      },
      "client": "mst",
      "input": "Weather in London?",
    },
    "response": {
      "response": "It is sunny in London.",
      "success": true,
      "toolCalls": [
        {
          "arguments": {
            "city": "London",
          },
          "name": "get_weather",
          "output": "sunny",
        },
        {
          "arguments": {
            "q": "London",
          },
          "name": "search",
        },
      ],
      "usage": {
        "durationMs": "<time>",
        "inputTokens": 100,
        "outputTokens": 20,
      },
    },
    "scores": {
      "judge": {
        "details": "Judge "completeness" failed with score 0.53 (threshold: 0.7) (mean of 3 reps: [0.20, 0.90, 0.50]). third",
        "judgeName": "completeness",
        "judgeProvider": "anthropic",
        "pass": false,
        "reasoning": "third",
        "score": 0.533333333333,
      },
    },
    "source": "eval",
    "trace": {
      "events": [
        {
          "arguments": {
            "city": "London",
          },
          "kind": "tool_call",
          "name": "get_weather",
          "output": "sunny",
          "source": "mcp",
        },
        {
          "arguments": {
            "q": "London",
          },
          "kind": "tool_call",
          "name": "search",
          "source": "mcp",
        },
      ],
      "finalText": "It is sunny in London.",
      "usage": {
        "durationMs": "<time>",
        "inputTokens": 100,
        "outputTokens": 20,
      },
    },
  },
}
`;

exports[`golden: runEval clients > an eval config declares two rubric judges and a case overrides one 1`] = `
{
  "calls": [
    [
      "createJudge",
      {},
    ],
    [
      "llm.evaluate",
      {
        "events": [
          {
            "arguments": {
              "city": "London",
            },
            "kind": "tool_call",
            "name": "get_weather",
            "output": "sunny",
            "server": "weather",
            "source": "mcp",
          },
          {
            "kind": "skill",
            "name": "forecasting",
            "source": "builtin",
          },
          {
            "kind": "tool_call",
            "name": "web_search",
            "source": "builtin",
          },
        ],
        "evidence": "structured",
        "response": "It is sunny in London.",
        "success": true,
        "telemetry": {
          "native": "kept",
        },
        "toolCalls": [
          {
            "arguments": {
              "city": "London",
            },
            "kind": "tool_call",
            "name": "get_weather",
            "output": "sunny",
            "server": "weather",
            "source": "mcp",
          },
          {
            "arguments": {},
            "kind": "tool_call",
            "name": "web_search",
            "source": "builtin",
          },
        ],
        "usage": {
          "durationMs": "<time>",
          "inputTokens": 50,
          "outputTokens": 10,
        },
      },
      null,
      "Evaluate whether the response is factually correct and accurately answers the question. Compare against the reference answer if provided. Score 1.0 for fully correct with no errors; Score 0.75 for mostly correct with one minor inaccuracy or omission; Score 0.5 for partially correct — answers part of the question but misses key elements; Score 0.25 for minimally relevant but substantially incorrect or missing most key details; Score 0.0 for incorrect, irrelevant, or directly contradicting the reference.",
    ],
    [
      "createJudge",
      {},
    ],
    [
      "llm.evaluate",
      {
        "events": [
          {
            "arguments": {
              "city": "London",
            },
            "kind": "tool_call",
            "name": "get_weather",
            "output": "sunny",
            "server": "weather",
            "source": "mcp",
          },
          {
            "kind": "skill",
            "name": "forecasting",
            "source": "builtin",
          },
          {
            "kind": "tool_call",
            "name": "web_search",
            "source": "builtin",
          },
        ],
        "evidence": "structured",
        "response": "It is sunny in London.",
        "success": true,
        "telemetry": {
          "native": "kept",
        },
        "toolCalls": [
          {
            "arguments": {
              "city": "London",
            },
            "kind": "tool_call",
            "name": "get_weather",
            "output": "sunny",
            "server": "weather",
            "source": "mcp",
          },
          {
            "arguments": {},
            "kind": "tool_call",
            "name": "web_search",
            "source": "builtin",
          },
        ],
        "usage": {
          "durationMs": "<time>",
          "inputTokens": 50,
          "outputTokens": 10,
        },
      },
      null,
      "Evaluate whether the response is appropriately concise without losing important information. Penalize unnecessary verbosity, padding, or repetition. Score 1.0 for well-sized — concise and complete with no unnecessary content; Score 0.75 for slightly verbose but no information is lost or repeated; Score 0.5 for moderately verbose — some padding or repetition that reduces clarity; Score 0.25 for excessively verbose — significantly overlong with substantial filler or repetition; Score 0.0 for extremely verbose — so padded or repetitive that the core answer is obscured.",
    ],
  ],
  "results": [
    {
      "clientTelemetry": {
        "native": "kept",
      },
      "clientUsage": {
        "durationMs": "<time>",
        "inputTokens": 50,
        "outputTokens": 10,
      },
      "datasetName": "golden",
      "durationMs": "<time>",
      "id": "suite-rubric",
      "pass": false,
      "request": {
        "assertions": {
          "passesJudge": [
            {
              "judge": "rubric",
              "options": {
                "rubric": "correctness",
              },
              "rubric": "correctness",
              "threshold": 0.9,
              "type": "rubric",
            },
            {
              "judge": "rubric",
              "options": {
                "rubric": "conciseness",
              },
              "rubric": "conciseness",
              "type": "rubric",
            },
          ],
        },
        "client": "test/golden-run-rubric-host",
        "input": "Weather in London?",
      },
      "response": {
        "events": [
          {
            "arguments": {
              "city": "London",
            },
            "kind": "tool_call",
            "name": "get_weather",
            "output": "sunny",
            "server": "weather",
            "source": "mcp",
          },
          {
            "kind": "skill",
            "name": "forecasting",
            "source": "builtin",
          },
          {
            "kind": "tool_call",
            "name": "web_search",
            "source": "builtin",
          },
        ],
        "evidence": "structured",
        "response": "It is sunny in London.",
        "success": true,
        "telemetry": {
          "native": "kept",
        },
        "toolCalls": [
          {
            "arguments": {
              "city": "London",
            },
            "kind": "tool_call",
            "name": "get_weather",
            "output": "sunny",
            "server": "weather",
            "source": "mcp",
          },
          {
            "arguments": {},
            "kind": "tool_call",
            "name": "web_search",
            "source": "builtin",
          },
        ],
        "usage": {
          "durationMs": "<time>",
          "inputTokens": 50,
          "outputTokens": 10,
        },
      },
      "scores": {
        "judge": {
          "details": "1/2 judges passed",
          "judgeResults": [
            {
              "details": "Judge "correctness" failed with score 0.60 (threshold: 0.9). Says sunny.",
              "judgeName": "correctness",
              "judgeProvider": "anthropic",
              "pass": false,
              "reasoning": "Says sunny.",
              "score": 0.6,
            },
            {
              "details": "Judge "conciseness" passed with score 0.80",
              "judgeName": "conciseness",
              "judgeProvider": "anthropic",
              "pass": true,
              "reasoning": "Short.",
              "score": 0.8,
            },
          ],
          "pass": false,
        },
      },
      "source": "eval",
      "trace": {
        "events": [
          {
            "arguments": {
              "city": "London",
            },
            "kind": "tool_call",
            "name": "get_weather",
            "output": "sunny",
            "server": "weather",
            "source": "mcp",
          },
          {
            "kind": "skill",
            "name": "forecasting",
            "source": "builtin",
          },
          {
            "kind": "tool_call",
            "name": "web_search",
            "source": "builtin",
          },
        ],
        "evidence": "structured",
        "finalText": "It is sunny in London.",
        "usage": {
          "durationMs": "<time>",
          "inputTokens": 50,
          "outputTokens": 10,
        },
      },
      "traceEvidence": "structured",
      "variant": "default",
    },
  ],
}
`;

exports[`golden: runEval clients > eval config judges merge with case judges 1`] = `
{
  "caseJudgeCalls": [
    [
      "golden-case-judge",
      {
        "events": [
          {
            "arguments": {
              "city": "London",
            },
            "kind": "tool_call",
            "name": "get_weather",
            "output": "sunny",
            "server": "weather",
            "source": "mcp",
          },
          {
            "kind": "skill",
            "name": "forecasting",
            "source": "builtin",
          },
          {
            "kind": "tool_call",
            "name": "web_search",
            "source": "builtin",
          },
        ],
        "evidence": "structured",
        "response": "It is sunny in London.",
        "success": true,
        "telemetry": {
          "native": "kept",
        },
        "toolCalls": [
          {
            "arguments": {
              "city": "London",
            },
            "kind": "tool_call",
            "name": "get_weather",
            "output": "sunny",
            "server": "weather",
            "source": "mcp",
          },
          {
            "arguments": {},
            "kind": "tool_call",
            "name": "web_search",
            "source": "builtin",
          },
        ],
        "usage": {
          "durationMs": "<time>",
          "inputTokens": 50,
          "outputTokens": 10,
        },
      },
      "canonical",
      {},
    ],
  ],
  "configJudgeCalls": [
    [
      {
        "events": [
          {
            "arguments": {
              "city": "London",
            },
            "kind": "tool_call",
            "name": "get_weather",
            "output": "sunny",
            "server": "weather",
            "source": "mcp",
          },
          {
            "kind": "skill",
            "name": "forecasting",
            "source": "builtin",
          },
          {
            "kind": "tool_call",
            "name": "web_search",
            "source": "builtin",
          },
        ],
        "evidence": "structured",
        "response": "It is sunny in London.",
        "success": true,
        "telemetry": {
          "native": "kept",
        },
        "toolCalls": [
          {
            "arguments": {
              "city": "London",
            },
            "kind": "tool_call",
            "name": "get_weather",
            "output": "sunny",
            "server": "weather",
            "source": "mcp",
          },
          {
            "arguments": {},
            "kind": "tool_call",
            "name": "web_search",
            "source": "builtin",
          },
        ],
        "usage": {
          "durationMs": "<time>",
          "inputTokens": 50,
          "outputTokens": 10,
        },
      },
      "case ref",
      {
        "count": 3,
      },
    ],
  ],
  "results": [
    {
      "clientTelemetry": {
        "native": "kept",
      },
      "clientUsage": {
        "durationMs": "<time>",
        "inputTokens": 50,
        "outputTokens": 10,
      },
      "datasetName": "golden",
      "durationMs": "<time>",
      "id": "suite-judged",
      "pass": false,
      "request": {
        "assertions": {
          "passesJudge": [
            {
              "judge": "test/golden-case-judge",
              "threshold": 0.5,
            },
            {
              "count": 2,
              "judge": "test/golden-config-judge",
              "options": {
                "count": 3,
              },
              "reference": "case ref",
              "type": "test/golden-config-judge",
            },
          ],
        },
        "client": "test/golden-run-judged-host",
        "input": "Weather in London?",
        "reference": "canonical",
      },
      "response": {
        "events": [
          {
            "arguments": {
              "city": "London",
            },
            "kind": "tool_call",
            "name": "get_weather",
            "output": "sunny",
            "server": "weather",
            "source": "mcp",
          },
          {
            "kind": "skill",
            "name": "forecasting",
            "source": "builtin",
          },
          {
            "kind": "tool_call",
            "name": "web_search",
            "source": "builtin",
          },
        ],
        "evidence": "structured",
        "response": "It is sunny in London.",
        "success": true,
        "telemetry": {
          "native": "kept",
        },
        "toolCalls": [
          {
            "arguments": {
              "city": "London",
            },
            "kind": "tool_call",
            "name": "get_weather",
            "output": "sunny",
            "server": "weather",
            "source": "mcp",
          },
          {
            "arguments": {},
            "kind": "tool_call",
            "name": "web_search",
            "source": "builtin",
          },
        ],
        "usage": {
          "durationMs": "<time>",
          "inputTokens": 50,
          "outputTokens": 10,
        },
      },
      "scores": {
        "judge": {
          "details": "1/2 judges passed",
          "judgeResults": [
            {
              "details": "Judge "test/golden-case-judge" passed with score 0.90",
              "judgeName": "test/golden-case-judge",
              "pass": true,
              "reasoning": "looks right",
              "score": 0.9,
            },
            {
              "details": "Judge "test/golden-config-judge" failed with score 0.00 (threshold: 0.7). eval config judge",
              "judgeName": "test/golden-config-judge",
              "pass": false,
              "reasoning": "eval config judge",
              "score": 0,
            },
          ],
          "pass": false,
        },
      },
      "source": "eval",
      "trace": {
        "events": [
          {
            "arguments": {
              "city": "London",
            },
            "kind": "tool_call",
            "name": "get_weather",
            "output": "sunny",
            "server": "weather",
            "source": "mcp",
          },
          {
            "kind": "skill",
            "name": "forecasting",
            "source": "builtin",
          },
          {
            "kind": "tool_call",
            "name": "web_search",
            "source": "builtin",
          },
        ],
        "evidence": "structured",
        "finalText": "It is sunny in London.",
        "usage": {
          "durationMs": "<time>",
          "inputTokens": 50,
          "outputTokens": 10,
        },
      },
      "traceEvidence": "structured",
      "variant": "default",
    },
  ],
}
`;

exports[`golden: runEval clients > run client 1`] = `
[
  {
    "clientTelemetry": {
      "native": "kept",
    },
    "clientUsage": {
      "durationMs": "<time>",
      "inputTokens": 50,
      "outputTokens": 10,
    },
    "datasetName": "golden",
    "durationMs": "<time>",
    "id": "suite-host",
    "pass": true,
    "request": {
      "assertions": {
        "containsText": "sunny",
        "toolsTriggered": {
          "calls": [
            {
              "name": "get_weather",
              "required": true,
            },
          ],
        },
      },
      "client": "test/golden-run-host",
      "input": "Weather in London?",
    },
    "response": {
      "events": [
        {
          "arguments": {
            "city": "London",
          },
          "kind": "tool_call",
          "name": "get_weather",
          "output": "sunny",
          "server": "weather",
          "source": "mcp",
        },
        {
          "kind": "skill",
          "name": "forecasting",
          "source": "builtin",
        },
        {
          "kind": "tool_call",
          "name": "web_search",
          "source": "builtin",
        },
      ],
      "evidence": "structured",
      "response": "It is sunny in London.",
      "success": true,
      "telemetry": {
        "native": "kept",
      },
      "toolCalls": [
        {
          "arguments": {
            "city": "London",
          },
          "kind": "tool_call",
          "name": "get_weather",
          "output": "sunny",
          "server": "weather",
          "source": "mcp",
        },
        {
          "arguments": {},
          "kind": "tool_call",
          "name": "web_search",
          "source": "builtin",
        },
      ],
      "usage": {
        "durationMs": "<time>",
        "inputTokens": 50,
        "outputTokens": 10,
      },
    },
    "scores": {
      "textContains": {
        "details": "Response contains expected text",
        "pass": true,
      },
      "toolsTriggered": {
        "details": "All tool call assertions met",
        "pass": true,
      },
    },
    "source": "eval",
    "toolCallTrace": {
      "calls": [
        {
          "arguments": {
            "city": "London",
          },
          "name": "get_weather",
          "status": "expected",
        },
        {
          "arguments": {},
          "name": "web_search",
          "status": "unexpected",
        },
      ],
      "missed": [],
    },
    "toolPrecision": 0.3333333333333333,
    "toolRecall": 1,
    "trace": {
      "events": [
        {
          "arguments": {
            "city": "London",
          },
          "kind": "tool_call",
          "name": "get_weather",
          "output": "sunny",
          "server": "weather",
          "source": "mcp",
        },
        {
          "kind": "skill",
          "name": "forecasting",
          "source": "builtin",
        },
        {
          "kind": "tool_call",
          "name": "web_search",
          "source": "builtin",
        },
      ],
      "evidence": "structured",
      "finalText": "It is sunny in London.",
      "usage": {
        "durationMs": "<time>",
        "inputTokens": 50,
        "outputTokens": 10,
      },
    },
    "traceEvidence": "structured",
    "variant": "default",
  },
]
`;

exports[`golden: runEval clients > runBatch client 1`] = `
[
  {
    "clientTelemetry": {
      "native": "kept",
    },
    "clientUsage": {
      "durationMs": "<time>",
      "inputTokens": 50,
      "outputTokens": 10,
    },
    "datasetName": "golden",
    "durationMs": "<time>",
    "id": "suite-host",
    "pass": true,
    "request": {
      "assertions": {
        "containsText": "sunny",
        "toolsTriggered": {
          "calls": [
            {
              "name": "get_weather",
              "required": true,
            },
          ],
        },
      },
      "client": "test/golden-runBatch-host",
      "input": "Weather in London?",
    },
    "response": {
      "events": [
        {
          "arguments": {
            "city": "London",
          },
          "kind": "tool_call",
          "name": "get_weather",
          "output": "sunny",
          "server": "weather",
          "source": "mcp",
        },
        {
          "kind": "skill",
          "name": "forecasting",
          "source": "builtin",
        },
        {
          "kind": "tool_call",
          "name": "web_search",
          "source": "builtin",
        },
      ],
      "evidence": "structured",
      "response": "It is sunny in London.",
      "success": true,
      "telemetry": {
        "native": "kept",
      },
      "toolCalls": [
        {
          "arguments": {
            "city": "London",
          },
          "kind": "tool_call",
          "name": "get_weather",
          "output": "sunny",
          "server": "weather",
          "source": "mcp",
        },
        {
          "arguments": {},
          "kind": "tool_call",
          "name": "web_search",
          "source": "builtin",
        },
      ],
      "usage": {
        "durationMs": "<time>",
        "inputTokens": 50,
        "outputTokens": 10,
      },
    },
    "scores": {
      "textContains": {
        "details": "Response contains expected text",
        "pass": true,
      },
      "toolsTriggered": {
        "details": "All tool call assertions met",
        "pass": true,
      },
    },
    "source": "eval",
    "toolCallTrace": {
      "calls": [
        {
          "arguments": {
            "city": "London",
          },
          "name": "get_weather",
          "status": "expected",
        },
        {
          "arguments": {},
          "name": "web_search",
          "status": "unexpected",
        },
      ],
      "missed": [],
    },
    "toolPrecision": 0.3333333333333333,
    "toolRecall": 1,
    "trace": {
      "events": [
        {
          "arguments": {
            "city": "London",
          },
          "kind": "tool_call",
          "name": "get_weather",
          "output": "sunny",
          "server": "weather",
          "source": "mcp",
        },
        {
          "kind": "skill",
          "name": "forecasting",
          "source": "builtin",
        },
        {
          "kind": "tool_call",
          "name": "web_search",
          "source": "builtin",
        },
      ],
      "evidence": "structured",
      "finalText": "It is sunny in London.",
      "usage": {
        "durationMs": "<time>",
        "inputTokens": 50,
        "outputTokens": 10,
      },
    },
    "traceEvidence": "structured",
    "variant": "default",
  },
]
`;

exports[`golden: the mst client (dataset API) > maps native tool names through toolMap 1`] = `
{
  "authType": "none",
  "clientUsage": {
    "durationMs": "<time>",
    "inputTokens": 100,
    "outputTokens": 20,
  },
  "datasetName": "single-case",
  "durationMs": "<time>",
  "id": "client",
  "pass": true,
  "project": "golden",
  "request": {
    "assertions": {
      "containsText": "sunny",
      "toolCallCount": {
        "max": 3,
        "min": 1,
      },
      "toolsTriggered": {
        "calls": [
          {
            "name": "get_weather",
            "required": true,
          },
          {
            "name": "forecast",
            "required": true,
          },
        ],
      },
    },
    "client": "mst",
    "input": "Weather in London?",
  },
  "response": {
    "response": "It is sunny in London.",
    "success": true,
    "toolCalls": [
      {
        "arguments": {
          "city": "London",
        },
        "name": "get_weather",
        "output": "sunny",
      },
      {
        "arguments": {
          "q": "London",
        },
        "name": "search",
      },
    ],
    "usage": {
      "durationMs": "<time>",
      "inputTokens": 100,
      "outputTokens": 20,
    },
  },
  "scores": {
    "textContains": {
      "details": "Response contains expected text",
      "pass": true,
    },
    "toolCallCount": {
      "details": "Tool call count (2) is within expected range",
      "pass": true,
    },
    "toolsTriggered": {
      "details": "All tool call assertions met",
      "pass": true,
    },
  },
  "source": "eval",
  "toolCallTrace": {
    "calls": [
      {
        "arguments": {
          "city": "London",
        },
        "name": "get_weather",
        "status": "expected",
      },
      {
        "arguments": {
          "q": "London",
        },
        "name": "search",
        "status": "expected",
      },
    ],
    "missed": [],
  },
  "toolPrecision": 1,
  "toolRecall": 1,
  "trace": {
    "events": [
      {
        "arguments": {
          "city": "London",
        },
        "kind": "tool_call",
        "name": "get_weather",
        "output": "sunny",
        "source": "mcp",
      },
      {
        "arguments": {
          "q": "London",
        },
        "kind": "tool_call",
        "name": "search",
        "source": "mcp",
      },
    ],
    "finalText": "It is sunny in London.",
    "usage": {
      "durationMs": "<time>",
      "inputTokens": 100,
      "outputTokens": 20,
    },
  },
}
`;

exports[`golden: the mst client (dataset API) > simulation failure 1`] = `
{
  "authType": "none",
  "datasetName": "single-case",
  "durationMs": "<time>",
  "error": "provider rejected the request",
  "id": "client",
  "pass": false,
  "project": "golden",
  "request": {
    "assertions": {
      "containsText": "sunny",
      "toolCallCount": {
        "max": 3,
        "min": 1,
      },
      "toolsTriggered": {
        "calls": [
          {
            "name": "get_weather",
            "required": true,
          },
          {
            "name": "forecast",
            "required": true,
          },
        ],
      },
    },
    "client": "mst",
    "input": "Weather in London?",
  },
  "scores": {},
  "source": "eval",
}
`;

exports[`golden: the mst client (dataset API) > succeeds with tool evidence and a missed required tool 1`] = `
{
  "authType": "none",
  "clientUsage": {
    "durationMs": "<time>",
    "inputTokens": 100,
    "outputTokens": 20,
  },
  "datasetName": "single-case",
  "durationMs": "<time>",
  "id": "client",
  "pass": false,
  "project": "golden",
  "request": {
    "assertions": {
      "containsText": "sunny",
      "toolCallCount": {
        "max": 3,
        "min": 1,
      },
      "toolsTriggered": {
        "calls": [
          {
            "name": "get_weather",
            "required": true,
          },
          {
            "name": "forecast",
            "required": true,
          },
        ],
      },
    },
    "client": "mst",
    "input": "Weather in London?",
  },
  "response": {
    "response": "It is sunny in London.",
    "success": true,
    "toolCalls": [
      {
        "arguments": {
          "city": "London",
        },
        "name": "get_weather",
        "output": "sunny",
      },
      {
        "arguments": {
          "q": "London",
        },
        "name": "search",
      },
    ],
    "usage": {
      "durationMs": "<time>",
      "inputTokens": 100,
      "outputTokens": 20,
    },
  },
  "scores": {
    "textContains": {
      "details": "Response contains expected text",
      "pass": true,
    },
    "toolCallCount": {
      "details": "Tool call count (2) is within expected range",
      "pass": true,
    },
    "toolsTriggered": {
      "details": "Expected tool 'forecast' to be called, but it was not",
      "pass": false,
    },
  },
  "source": "eval",
  "toolCallTrace": {
    "calls": [
      {
        "arguments": {
          "city": "London",
        },
        "name": "get_weather",
        "status": "expected",
      },
      {
        "arguments": {
          "q": "London",
        },
        "name": "search",
        "status": "unexpected",
      },
    ],
    "missed": [
      {
        "name": "forecast",
      },
    ],
  },
  "toolPrecision": 0.5,
  "toolRecall": 0.5,
  "trace": {
    "events": [
      {
        "arguments": {
          "city": "London",
        },
        "kind": "tool_call",
        "name": "get_weather",
        "output": "sunny",
        "source": "mcp",
      },
      {
        "arguments": {
          "q": "London",
        },
        "kind": "tool_call",
        "name": "search",
        "source": "mcp",
      },
    ],
    "finalText": "It is sunny in London.",
    "usage": {
      "durationMs": "<time>",
      "inputTokens": 100,
      "outputTokens": 20,
    },
  },
}
`;

exports[`golden: the mst client (dataset API) > trials exclude infrastructure errors from the pass rate 1`] = `
{
  "authType": "none",
  "clientUsage": {
    "durationMs": "<time>",
    "inputTokens": 200,
    "outputTokens": 40,
  },
  "datasetName": "single-case",
  "durationMs": "<time>",
  "id": "client",
  "infrastructureErrorCount": 1,
  "infrastructureErrorRate": 0.3333333333333333,
  "pass": false,
  "passRate": 0,
  "passRateCI": {
    "lower": 0,
    "upper": 0.7097805044546776,
  },
  "project": "golden",
  "request": {
    "assertions": {
      "containsText": "sunny",
      "toolCallCount": {
        "max": 3,
        "min": 1,
      },
      "toolsTriggered": {
        "calls": [
          {
            "name": "get_weather",
            "required": true,
          },
          {
            "name": "forecast",
            "required": true,
          },
        ],
      },
    },
    "client": "mst",
    "input": "Weather in London?",
    "passThreshold": 0.5,
    "trials": 3,
  },
  "response": {
    "response": "cloudy",
    "success": true,
    "toolCalls": [
      {
        "arguments": {
          "city": "London",
        },
        "name": "get_weather",
        "output": "sunny",
      },
      {
        "arguments": {
          "q": "London",
        },
        "name": "search",
      },
    ],
    "usage": {
      "durationMs": "<time>",
      "inputTokens": 100,
      "outputTokens": 20,
    },
  },
  "scores": {
    "textContains": {
      "details": "Response does not contain expected text: "sunny"",
      "pass": false,
    },
    "toolCallCount": {
      "details": "Tool call count (2) is within expected range",
      "pass": true,
    },
    "toolsTriggered": {
      "details": "Expected tool 'forecast' to be called, but it was not",
      "pass": false,
    },
  },
  "source": "eval",
  "toolCallTrace": {
    "calls": [
      {
        "arguments": {
          "city": "London",
        },
        "name": "get_weather",
        "status": "expected",
      },
      {
        "arguments": {
          "q": "London",
        },
        "name": "search",
        "status": "unexpected",
      },
    ],
    "missed": [
      {
        "name": "forecast",
      },
    ],
  },
  "toolPrecision": 0.5,
  "toolRecall": 0.5,
  "trialResults": [
    {
      "clientUsage": {
        "durationMs": "<time>",
        "inputTokens": 100,
        "outputTokens": 20,
      },
      "durationMs": "<time>",
      "isInfrastructureError": false,
      "pass": false,
      "toolCallTrace": {
        "calls": [
          {
            "arguments": {
              "city": "London",
            },
            "name": "get_weather",
            "status": "expected",
          },
          {
            "arguments": {
              "q": "London",
            },
            "name": "search",
            "status": "unexpected",
          },
        ],
        "missed": [
          {
            "name": "forecast",
          },
        ],
      },
      "trace": {
        "events": [
          {
            "arguments": {
              "city": "London",
            },
            "kind": "tool_call",
            "name": "get_weather",
            "output": "sunny",
            "source": "mcp",
          },
          {
            "arguments": {
              "q": "London",
            },
            "kind": "tool_call",
            "name": "search",
            "source": "mcp",
          },
        ],
        "finalText": "It is sunny in London.",
        "usage": {
          "durationMs": "<time>",
          "inputTokens": 100,
          "outputTokens": 20,
        },
      },
    },
    {
      "durationMs": "<time>",
      "error": "read ECONNRESET",
      "isInfrastructureError": true,
      "pass": false,
    },
    {
      "clientUsage": {
        "durationMs": "<time>",
        "inputTokens": 100,
        "outputTokens": 20,
      },
      "durationMs": "<time>",
      "isInfrastructureError": false,
      "pass": false,
      "toolCallTrace": {
        "calls": [
          {
            "arguments": {
              "city": "London",
            },
            "name": "get_weather",
            "status": "expected",
          },
          {
            "arguments": {
              "q": "London",
            },
            "name": "search",
            "status": "unexpected",
          },
        ],
        "missed": [
          {
            "name": "forecast",
          },
        ],
      },
      "trace": {
        "events": [
          {
            "arguments": {
              "city": "London",
            },
            "kind": "tool_call",
            "name": "get_weather",
            "output": "sunny",
            "source": "mcp",
          },
          {
            "arguments": {
              "q": "London",
            },
            "kind": "tool_call",
            "name": "search",
            "source": "mcp",
          },
        ],
        "finalText": "cloudy",
        "usage": {
          "durationMs": "<time>",
          "inputTokens": 100,
          "outputTokens": 20,
        },
      },
    },
  ],
}
`;
